--- a/app/pom.xml
+++ b/app/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>uniandes.edu.co</groupId>
-	<artifactId>parranderos</artifactId>
+	<artifactId>hotelandes</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>parranderos</name>
+	<name>hotelandes</name>
 	<description>Aplicación de prueba para el curso Sistemas Transaccionales</description>
 	<properties>
 		<java.version>17</java.version>
