--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.hql.bulk_id_strategy.global_temporary.create_tables=false
 spring.datasource.url= jdbc:oracle:thin:@fn3.oracle.virtual.uniandes.edu.co:1521:PROD
-spring.datasource.username="ISIS2304B05202320"
-spring.datasource.password="EYbnwjAgVEFX" 
+spring.datasource.username="ISIS2304B32202320"
+spring.datasource.password="yHRjWKnPGZAn" 
 spring.datasource.driver-class-name= oracle.jdbc.OracleDriver
 spring.jpa.database-platform=oracle
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle12cDialect
