--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle12cDialect
 spring.jpa.show-sql=true
 spring.thymeleaf.prefix=classpath:/templates/
 
+spring.mvc.view.prefix=/templates/
+spring.mvc.view.default-view-name=index
+
+
